@@ -1,25 +1,21 @@
 plugins {
+    id 'java'
     id 'application'
-    id 'org.openjfx.javafxplugin' version '0.0.7'
+    id 'org.openjfx.javafxplugin' version '0.0.8'
 }
 
 group 'com.windhc'
 version '1.0-SNAPSHOT'
 
-sourceCompatibility = JavaVersion.VERSION_11
-targetCompatibility = JavaVersion.VERSION_11
+sourceCompatibility = JavaVersion.VERSION_14
+targetCompatibility = JavaVersion.VERSION_14
 
 repositories {
     maven { url 'https://maven.aliyun.com/repository/public' }
 }
-jar {
-    manifest {
-        attributes 'Main-Class': 'com.windhc.MainApp'
-    }
-}
-mainClassName = "$moduleName/com.windhc.MainApp"
 
 javafx {
+    version = "14"
     modules = [ 'javafx.controls', 'javafx.fxml' ]
 }
 
@@ -27,22 +23,4 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
-def java_home = hasProperty('org.gradle.java.home') ? getProperty('org.gradle.java.home') : System.getenv('JAVA_HOME')
-def fx_jmods = hasProperty('path.to.fx.mods') ? getProperty('path.to.fx.mods') : System.getenv('PATH_TO_FX_MODS')
-
-task jlink(type: Exec) {
-    dependsOn 'clean'
-    dependsOn 'jar'
-
-    workingDir 'build'
-
-    if (java_home == null) {
-        throw new RuntimeException("java_home is not defined.")
-    }
-    if (fx_jmods == null) {
-        throw new RuntimeException("fx_jmods is not defined.")
-    }
-    commandLine "${java_home}/bin/jlink", '--module-path', "libs${File.pathSeparatorChar}${fx_jmods}",
-            '--add-modules', "${moduleName}", '--output', "${moduleName}", '--strip-debug',
-            '--compress', '2', '--no-header-files', '--no-man-pages'
-}
+mainClassName = "com.windhc.MainApp"
